--- a/package.json
+++ b/package.json
@@ -1,45 +1,73 @@
 {
-  "name": "template-javascript",
+  "name": "esbuild-postcss",
   "version": "0.0.0",
   "private": true,
-  "keywords": [],
-  "repository": "git@github.com:karolis-sh/template-javascript.git",
+  "description": "Seamless integration between esbuild and PostCSS",
+  "keywords": [
+    "esbuild",
+    "plugin",
+    "postcss"
+  ],
+  "repository": "git@github.com:karolis-sh/esbuild-postcss.git",
   "license": "MIT",
   "author": "Karolis Šarapnickis",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "scripts": {
+    "clean": "rm -rf lib",
+    "dev": "yarn build:js --watch",
+    "build": "run-p build:*",
+    "build:js": "esbuild src/index.ts --outdir=lib --platform=node --format=cjs",
+    "build:types": "tsc --declaration --emitDeclarationOnly",
     "commit": "npx cz",
     "format": "run-p format:*",
     "format:package.json": "sort-package-json package.json",
     "format:prettier": "prettier --write '**/*.*'",
     "lint": "run-p lint:*",
-    "lint:js": "eslint . --cache",
+    "lint:js": "eslint . --cache --ignore-path .gitignore",
     "lint:md": "markdownlint-cli2 '**/*.md' '!node_modules' '!**/node_modules' '!**/CHANGELOG.md'",
-    "qa": "run-p lint",
-    "release": "yarn && run-s qa && standard-version --no-verify && git push --follow-tags --no-verify && npm publish",
+    "lint:types": "tsc --noEmit",
+    "test": "jest",
+    "qa": "run-p lint test",
+    "release": "yarn && run-s clean build qa && standard-version --no-verify && git push --follow-tags --no-verify && npm publish",
     "prepare": "husky install"
   },
   "lint-staged": {
     "**/package.json": "sort-package-json",
-    "*.{js}": "eslint --fix"
+    "*.{js,ts}": "eslint --fix"
   },
   "config": {
     "commitizen": {
       "path": "cz-conventional-changelog"
     }
   },
+  "dependencies": {
+    "postcss-load-config": "^3.1.0"
+  },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@k.sh/eslint-config": "^1.21.2",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^16.3.1",
     "cz-conventional-changelog": "^3.3.0",
+    "esbuild": "^0.12.15",
+    "esbuild-jest": "^0.5.0",
     "husky": "^7.0.1",
+    "jest": "^27.0.6",
     "lint-staged": ">=10",
     "markdownlint-cli2": "^0.1.3",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.5",
+    "postcss-custom-properties": "^11.0.0",
     "pretty-quick": "^3.1.1",
     "sort-package-json": "^1.50.0",
-    "standard-version": "^9.3.0"
+    "standard-version": "^9.3.0",
+    "typescript": "^4.3.5"
+  },
+  "peerDependencies": {
+    "esbuild": "*",
+    "postcss": "^8.0.0"
   },
   "volta": {
     "node": "14.17.3",
