--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "pretty-quick": "^3.1.1",
     "sort-package-json": "^1.50.0",
     "standard-version": "^9.3.0",
+    "sugarss": "^4.0.1",
     "typescript": "^4.3.5"
   },
   "peerDependencies": {
