chore: upgrade formatters

--- a/.prettierignore
+++ b/.prettierignore
@@ -7,6 +7,8 @@
 !*.json
 !*.md
 !*.yml
+!*.sh
+!*.gitignore
 
 # npm files
 node_modules
@@ -14,3 +16,5 @@ package.json
 
 # project
 lib
+CHANGELOG.md
+.husky/_/
