--- a/package.json
+++ b/package.json
@@ -35,11 +35,6 @@
     "**/package.json": "sort-package-json",
     "*.{js,ts}": "eslint --fix"
   },
-  "config": {
-    "commitizen": {
-      "path": "cz-conventional-changelog"
-    }
-  },
   "dependencies": {
     "postcss-load-config": "^3.1.0"
   },
@@ -47,11 +42,13 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@k.sh/eslint-config": "^1.21.2",
+    "@k.sh/prettier-config": "^0.4.1",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "esbuild": "^0.12.15",
     "esbuild-jest": "^0.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "lint-staged": ">=10",
@@ -61,8 +58,10 @@
     "postcss-custom-properties": "^11.0.0",
     "postcss-import": "^14.0.2",
     "postcss-nested": "^5.0.5",
-    "pretty-quick": "^3.1.1",
-    "sort-package-json": "^1.50.0",
+    "prettier": "^2.8.1",
+    "prettier-plugin-sh": "^0.12.8",
+    "pretty-quick": "^3.1.3",
+    "sort-package-json": "^2.1.0",
     "standard-version": "^9.3.0",
     "sugarss": "^4.0.1",
     "typescript": "^4.3.5"
