--- a/package.json
+++ b/package.json
@@ -41,14 +41,15 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "@k.sh/eslint-config": "^1.21.2",
+    "@k.sh/eslint-plugin": "^0.7.0",
     "@k.sh/prettier-config": "^0.4.1",
+    "@k.sh/typescript-config": "^0.3.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^16.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "esbuild": "^0.12.15",
     "esbuild-jest": "^0.5.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.31.0",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "lint-staged": ">=10",
