test: refactor tests to test actual built plugin

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "clean": "rm -rf lib",
     "dev": "yarn build:js --watch",
     "build": "run-p build:*",
-    "build:js": "esbuild src/index.ts --outdir=lib --platform=node --format=cjs",
-    "build:types": "tsc --declaration --emitDeclarationOnly",
+    "build:js": "esbuild src/index.ts --outdir=lib --platform=node --format=cjs --target=node12  --tsconfig=tsconfig.release.json --sourcemap",
+    "build:types": "tsc -p tsconfig.release.json",
     "commit": "npx cz",
     "format": "run-p format:*",
     "format:package.json": "sort-package-json package.json",
@@ -26,8 +26,10 @@
     "lint:js": "eslint . --cache --ignore-path .gitignore",
     "lint:md": "markdownlint-cli2 '**/*.md' '!node_modules' '!**/node_modules' '!**/CHANGELOG.md'",
     "lint:types": "tsc --noEmit",
+    "pretest": "yarn build",
     "test": "jest",
-    "qa": "run-p lint test",
+    "tdd": "run-p dev 'test --watch'",
+    "qa": "yarn clean && run-p lint test",
     "release": "yarn && run-s clean build qa && standard-version --no-verify && git push --follow-tags --no-verify && npm publish",
     "prepare": "husky install"
   },
