--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "format:package.json": "sort-package-json package.json",
     "format:prettier": "prettier --write '**/*.*'",
     "lint": "run-p lint:*",
-    "lint:js": "eslint . --cache --ignore-path .gitignore",
+    "lint:js": "eslint .",
     "lint:md": "markdownlint-cli2 '**/*.md' '!node_modules' '!**/node_modules' '!**/CHANGELOG.md'",
     "lint:types": "tsc --noEmit",
     "pretest": "yarn build",
@@ -41,16 +41,16 @@
     "postcss-load-config": "^3.1.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.4.0",
-    "@commitlint/config-conventional": "^17.4.0",
-    "@k.sh/eslint-plugin": "^0.7.0",
+    "@commitlint/cli": "^17.4.2",
+    "@commitlint/config-conventional": "^17.4.2",
+    "@k.sh/eslint-plugin": "^0.8.0",
     "@k.sh/prettier-config": "^0.4.1",
-    "@k.sh/typescript-config": "^0.3.3",
-    "@types/jest": "^29.2.5",
+    "@k.sh/typescript-config": "^0.4.0",
+    "@types/jest": "^29.2.6",
     "@types/node": "^18.11.18",
     "cz-conventional-changelog": "^3.3.0",
-    "esbuild": "^0.16.14",
-    "eslint": "^8.31.0",
+    "esbuild": "^0.17.4",
+    "eslint": "^8.32.0",
     "husky": "^8.0.3",
     "jest": "^29.3.1",
     "lint-staged": ">=13.1.0",
@@ -60,11 +60,11 @@
     "postcss-custom-properties": "^12.1.11",
     "postcss-import": "^15.1.0",
     "postcss-nested": "^6.0.0",
-    "prettier": "^2.8.1",
+    "prettier": "^2.8.3",
     "prettier-plugin-sh": "^0.12.8",
     "pretty-quick": "^3.1.3",
     "sort-package-json": "^2.1.0",
-    "standard-version": "^9.3.0",
+    "standard-version": "^9.5.0",
     "sugarss": "^4.0.1",
     "typescript": "^4.9.4"
   },
